[gd_scene load_steps=4 format=3 uid="uid://cp7od0f8qlna1"]

[ext_resource type="Script" path="res://option_screen.gd" id="1_nhhob"]
[ext_resource type="Theme" uid="uid://172w2bxq0x0l" path="res://Button.tres" id="3_8vx7w"]
[ext_resource type="PackedScene" uid="uid://1pks3pmj41po" path="res://Resolution.tscn" id="4_0iwlg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhhob")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 209.0
offset_right = 735.0
offset_bottom = 350.0

[node name="Window" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Maxamized"
popup/item_1/id = 1
popup/item_2/text = "Minimized "
popup/item_2/id = 2
popup/item_3/text = "Windowed "
popup/item_3/id = 3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.5
step = 0.001

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_8vx7w")
text = "Back
"

[node name="Menu" parent="." instance=ExtResource("4_0iwlg")]
visible = false
layout_mode = 1

[connection signal="item_selected" from="VBoxContainer/Window" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="back" from="Menu" to="." method="_on_menu_back"]
